[package]
name = "ros2_rust_wasm"
version = "0.1.0"
authors = ["Tim Perkins <code@tprk77.net>"]
edition = "2018"

[[bin]]
name = "ros2_rust_wasm"
path = "src/main.rs"

[dependencies]
getopts = "0.2"
wasmer-runtime = { path = "../../../extern/wasmer/lib/runtime" }
wasmer-emscripten = { path = "../../../extern/wasmer/lib/emscripten" }
